[gd_scene load_steps=5 format=3 uid="uid://bdw1iypup776f"]

[ext_resource type="Script" path="res://scenes/gamemodes/battle.gd" id="1_puk1i"]
[ext_resource type="PackedScene" uid="uid://cn5ca3ycbsm2p" path="res://scenes/base_level.tscn" id="2_kp6gd"]
[ext_resource type="PackedScene" uid="uid://8lasdew10kc0" path="res://scenes/ui/ui.tscn" id="3_e673a"]
[ext_resource type="PackedScene" uid="uid://xqfxp3bk3bcr" path="res://scenes/game_end/end_screen.tscn" id="4_wpgaq"]

[node name="Battle" type="Node2D"]
script = ExtResource("1_puk1i")

[node name="BaseLevel" parent="." instance=ExtResource("2_kp6gd")]

[node name="Ui" parent="." instance=ExtResource("3_e673a")]

[node name="MatchTimer" type="Timer" parent="."]
wait_time = 120.0
one_shot = true

[node name="EndScreen" parent="." instance=ExtResource("4_wpgaq")]

[connection signal="game_ended" from="." to="EndScreen" method="_on_game_end"]
[connection signal="hide_ui" from="." to="Ui" method="_on_game_end"]
[connection signal="score_changed" from="." to="Ui" method="_on_gamemode_score_changed"]
[connection signal="timer_changed" from="." to="Ui" method="_on_gamemode_timer_changed"]
[connection signal="blue_player_hit" from="BaseLevel" to="." method="_on_base_level_blue_player_hit"]
[connection signal="red_player_hit" from="BaseLevel" to="." method="_on_base_level_red_player_hit"]
[connection signal="timeout" from="MatchTimer" to="." method="check_game_end"]
[connection signal="continue_pressed" from="EndScreen" to="." method="_on_end_screen_continue_pressed"]
